# Xiao-s-Ziphacker

./: .gitignore  CMakeLists.txt  CMakePresets.json  PreValidation.cu  README.md  main.cpp  main.h  multithread.cpp  multithread.h  options.cpp  options.h  resources.cpp  resources.h  vcpkg.json
src/: main.cpp  main.h  multithread.cpp  multithread.h  options.cpp  options.h  resources.cpp  resources.h
